# CVEE

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  OPENCODE.md  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: ci.yaml  deploy.yaml
api/: Dockerfile  app.py  config.py  embed_cv_search.py  export_onnx.py  models.py  pyproject.toml  requirements.txt  stopwords.json  utils.py
assets/: demo.webm
databricks/: __init__.py  _secrets_template.py  cleanup.py  common.py  export.py  gold.py  pyproject.toml  run_all.py  silver.py
docker/: docker-compose.yml
functions/api-to-gcs/: ft_client.py  main.py  pyproject.toml
functions/billing-guard/: main.py  pyproject.toml  requirements.txt
functions/ingest-db/: cleanup.py  gcs_sync.py  main.py  pyproject.toml
functions/pipeline/: core.py  main.py  pyproject.toml  requirements.txt
functions/shared/: config.py
infra/: .gitignore  .terraform.lock.hcl  cloud_functions.tf  cloud_run.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  setup_billing_guard.sh  storage.tf  terraform.tfvars.example  variables.tf  workflows.tf
infra/billing-guard/: main.py
infra/workflows/: etl_pipeline.yaml.tftpl
k8s/: api-deployment.yaml  api-service.yaml  api-to-s3-cronjob.yaml  ingest-postgre-cronjob.yaml  ingest-supabase-cronjob.yaml  initdb-job.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  ui-deployment.yaml  ui-service.yaml
pipeline/: init_db.py  pipeline.py  pyproject.toml
pipeline/migrations/: env.py
pipeline/migrations/versions/: 3a9f1c7b2d84_add_title_tsv_generated_column.py  8cef33abbe6d_initial_schema.py
sandbox/: jobs.json
scripts/: analytics.py  backfill.py  deploy.sh  update_secrets.py
src/: Dockerfile  Dockerfile.api-to-s3  Dockerfile.postgre-ingest  Dockerfile.supabase-ingest  api_to_s3_loader.py  collect_and_push_to_s3.py  collect_data.py  databricks_to_s3.ipynb  duplicate_database.py  elt_raw_to_silver.ipynb  embedding.ipynb  import_embedding_from_s3.py  init_db.py  jobs_embeddings_gold.ipynb  jobs_export.ipynb  jobs_ingestion_silver.ipynb  requirements.txt  sync_s3_to_postgres.py  sync_s3_to_supabase.py
src/cf-api-to-s3/: api_to_s3_loader.py  main.py  requirements.txt
src/cf-ingest-db/: cleanup_dead_jobs.py  main.py  requirements.txt  sync_s3_to_supabase.py
tests/: conftest.py  test_api.py  test_embed_cv_search.py  test_pipeline_core.py  test_utils.py
tests/e2e/: conftest.py  test_upload_flow.py
ui/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt
