[project]
name = "cvee"
version = "0.1.0"
description = "CV-Embedding Engine — AI-powered job matching"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "gcsfs>=2024.2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.workspace]
members = [
    "api",
    "ui",
    "pipeline",
    "functions/api-to-gcs",
    "functions/ingest-db",
    "functions/pipeline",
    "functions/billing-guard",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "gcsfs>=2024.2.0",
    "mypy>=2.1.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pypdf>=3.0.0",
    "torch>=2.0.0",
    "sentence-transformers>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "structlog>=24.0.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long handled by formatter
    "N803",  # FT API param names are camelCase
    "N806",  # local constants are uppercase
    "B008",  # FastAPI File(...) default
]
exclude = [
    "src/*",       # legacy Databricks/shared code
    "infra/*",     # moved to functions/
    "docker/*",    # just compose file
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"

[tool.coverage.run]
source = ["api", "functions/pipeline"]
branch = true
omit = ["*/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
strict = true
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_decorators = false
exclude = ["src/", "infra/", "scripts/", "pipeline/", "functions/", "ui/"]
ignore_missing_imports = true
