[project]
name = "cvee-api"
version = "0.1.0"
description = "CVEE FastAPI service"
requires-python = ">=3.12"

[dependencies]
fastapi = "==0.111.1"
uvicorn = { version = "==0.23.2", extras = ["standard"] }
psycopg2-binary = "==2.9.7"
pypdf = ">=3.0.0"
requests = "==2.31.0"
python-dotenv = "==1.0.1"
sentence-transformers = ">=2.2.2"
python-multipart = ">=0.0.9"
aiohttp = ">=3.9.0"
