[project]
name = "cvee-cf-api-to-gcs"
version = "0.1.0"
description = "Cloud Function: fetch France Travail jobs → GCS"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.5.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "pyarrow>=15.0.0",
    "gcsfs>=2024.2.0",
    "google-cloud-secret-manager>=2.0.0",
    "python-dotenv>=1.0.0",
]
