[project]
name = "cvee-cf-ingest-db"
version = "0.1.0"
description = "Cloud Function: GCS → Supabase ingest + dead job cleanup"
requires-python = ">=3.12"

[dependencies]
functions-framework = "==3.7.0"
pandas = "==2.2.1"
numpy = "==1.26.4"
pyarrow = "==15.0.2"
gcsfs = "==2024.2.0"
psycopg2-binary = "==2.9.9"
google-cloud-secret-manager = "==2.26.0"
python-dotenv = "==1.0.1"
aiohttp = ">=3.9.0"
