[project]
name = "cvee-cf-ingest-db"
version = "0.1.0"
description = "Cloud Function: GCS → Supabase ingest + dead job cleanup"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "gcsfs>=2024.2.0",
    "psycopg2-binary>=2.9.7",
    "google-cloud-secret-manager>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]
