[project]
name = "cvee-cf-pipeline"
version = "0.1.0"
description = "Cloud Function: Bronze→Silver→Gold ETL (raw → embeddings → Parquet)"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.5.0",
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "gcsfs>=2024.2.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "google-cloud-secret-manager>=2.0.0",
]
